This is a new commit

--- a/CSS3 Android logo.html
+++ b/CSS3 Android logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSS3 Android logo</title>
+<title>CSS3 Android logo practise</title>
 <link rel="stylesheet" href="CSS3androidlogo.css">
 </head>
 <body>
